{
  "version": 4,
  "terraform_version": "0.12.30",
  "serial": 27,
  "lineage": "2d35ad4d-a00d-1c7e-f6f6-5c03c822ddbf",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "vm_static_ip",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.193.230.30",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-02-28T20:33:38.188-08:00",
            "id": "projects/terraform-course-306221/regions/us-central1/addresses/terraform-static-ip",
            "name": "terraform-static-ip",
            "network_tier": "PREMIUM",
            "project": "terraform-course-306221",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-course-306221/regions/us-central1/addresses/terraform-static-ip"
          }
        }
      ]
    },
    {
      "module": "module.network_fabric-net-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-admins",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.network_fabric-net-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-02-28T20:33:59.999-08:00",
            "deny": [],
            "description": "Allow ingress traffic from internal IP ranges",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-course-306221/global/firewalls/my-vpc-network-ingress-internal",
            "log_config": [],
            "name": "my-vpc-network-ingress-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-course-306221/global/networks/my-vpc-network",
            "priority": 1000,
            "project": "terraform-course-306221",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-course-306221/global/firewalls/my-vpc-network-ingress-internal",
            "source_ranges": [
              "10.0.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "module.network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.network_fabric-net-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-http",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-28T20:33:59.968-08:00",
            "deny": [],
            "description": "Allow HTTP to machines with the 'http-server' tag",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-course-306221/global/firewalls/my-vpc-network-ingress-tag-http",
            "log_config": [],
            "name": "my-vpc-network-ingress-tag-http",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-course-306221/global/networks/my-vpc-network",
            "priority": 1000,
            "project": "terraform-course-306221",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-course-306221/global/firewalls/my-vpc-network-ingress-tag-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.network_fabric-net-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-https",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-28T20:33:59.963-08:00",
            "deny": [],
            "description": "Allow HTTPS to machines with the 'https' tag",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-course-306221/global/firewalls/my-vpc-network-ingress-tag-https",
            "log_config": [],
            "name": "my-vpc-network-ingress-tag-https",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-course-306221/global/networks/my-vpc-network",
            "priority": 1000,
            "project": "terraform-course-306221",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-course-306221/global/firewalls/my-vpc-network-ingress-tag-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.network_fabric-net-firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-ssh",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-28T20:33:59.959-08:00",
            "deny": [],
            "description": "Allow SSH to machines with the 'ssh' tag",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-course-306221/global/firewalls/my-vpc-network-ingress-tag-ssh",
            "log_config": [],
            "name": "my-vpc-network-ingress-tag-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-course-306221/global/networks/my-vpc-network",
            "priority": 1000,
            "project": "terraform-course-306221",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-course-306221/global/firewalls/my-vpc-network-ingress-tag-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/terraform-course-306221/global/networks/my-vpc-network",
            "mtu": 0,
            "name": "my-vpc-network",
            "project": "terraform-course-306221",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-course-306221/global/networks/my-vpc-network"
          }
        }
      ]
    },
    {
      "module": "module.network_routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "each": "map",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": "egress-internet",
          "schema_version": 0,
          "attributes": {
            "description": "Route through IGW to internet",
            "dest_range": "0.0.0.0/0",
            "id": "projects/terraform-course-306221/global/routes/egress-internet",
            "name": "egress-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-course-306221/global/networks/my-vpc-network",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/terraform-course-306221/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "terraform-course-306221",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-course-306221/global/routes/egress-internet",
            "tags": [
              "egress-inet"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "each": "map",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.network.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "each": "map",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": "us-central1/subnet-01",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-28T20:34:00.175-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/terraform-course-306221/regions/us-central1/subnetworks/subnet-01",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "subnet-01",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-course-306221/global/networks/my-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-course-306221",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-course-306221/regions/us-central1/subnetworks/subnet-01"
          },
          "dependencies": [
            "module.network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    }
  ]
}